# meowplotlib

./: .gitignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  STANDUP_PLAN.md  agentic-project-recipe.md  catplotlib-PRD.md  constitution.md  meowplotlib-PRD.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
scripts/: gallery.py  make_placeholders.py  make_readme_image.py
specs/001-core-placement-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-placement-engine/checklists/: requirements.md
specs/001-core-placement-engine/contracts/: placement-api.md
specs/002-matplotlib-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-matplotlib-integration/checklists/: requirements.md
specs/002-matplotlib-integration/contracts/: hook-api.md
specs/003-style-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-style-system/checklists/: requirements.md
src/catplotlib/: __init__.py  api.py
src/catplotlib/assets/: registry.py  styles.toml
src/meowplotlib/: __init__.py  api.py
tests/: test_api.py  test_packaging.py  test_public_api.py
tests/assets/: test_registry.py
tests/core/: test_placement.py  test_purity.py
tests/render/: _helpers.py  conftest.py  test_artist.py  test_bboxes.py  test_hook.py  test_matrix.py
(+15 files in other folders)
