[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catplotlib"
version = "0.1.0"
description = "Whimsical cat decorations for matplotlib figures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/catplotlib"]

[tool.hatch.build.targets.wheel.force-include]
"src/catplotlib/assets/images" = "catplotlib/assets/images"
"src/catplotlib/assets/styles.toml" = "catplotlib/assets/styles.toml"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
